# c-iot-drivers

./: CMakeLists.txt
include/hkk/: defines.h
include/hkk/bus/i2c/: i2c.hpp
include/hkk/bus/owi/: owi.hpp
include/hkk/bus/spi/: spi.hpp
include/hkk/bus/uart/: uart.hpp
include/hkk/core/dma/: dma.hpp
include/hkk/drivers/bme280/: bme280.hpp  device.hpp  model.hpp  utils.hpp
include/hkk/drivers/dht20/: device.hpp  dht20.hpp  model.hpp  utils.hpp
include/hkk/drivers/pms5003/: device.hpp  model.hpp  pms5003.hpp  utils.hpp
include/hkk/drivers/sgp30/: device.hpp  model.hpp  sgp30.hpp  utils.hpp
include/hkk/logger/: logger.h
include/hkk/storage/: nvm.hpp
include/hkk/utils/: time.hpp  utils.hpp
src/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/bme280/: CMakeLists.txt  bme280.cpp  commands.cpp  utils.cpp
src/drivers/dht20/: CMakeLists.txt  commands.cpp  dht20.cpp  utils.cpp
src/drivers/pms5003/: CMakeLists.txt  commands.cpp  pms5003.cpp  utils.cpp
src/drivers/sgp30/: CMakeLists.txt  commands.cpp  sgp30.cpp  utils.cpp
src/platform/: CMakeLists.txt
src/platform/rp2350/: CMakeLists.txt
src/platform/rp2350/bus/: CMakeLists.txt
src/platform/rp2350/bus/i2c/: CMakeLists.txt  i2c.cpp
src/platform/rp2350/bus/owi/: CMakeLists.txt  owi.cpp  owi.pio  owi.pio.h
src/platform/rp2350/bus/spi/: CMakeLists.txt  spi.cpp
src/platform/rp2350/bus/uart/: CMakeLists.txt  dma.cpp  uart.cpp
src/platform/rp2350/core/: CMakeLists.txt
src/platform/rp2350/core/dma/: CMakeLists.txt  dma.cpp
src/platform/rp2350/storage/: CMakeLists.txt  flash.cpp  nvm.cpp
src/platform/rp2350/utils/: CMakeLists.txt  utils.cpp
src/platform/utils/: utils.cpp
